# 2048AiProject

./: .gitignore  2048.cpp  AI  CMakeLists.txt  README.md  ai.c  ai.cpp  bench.sh  dqn.md  exec.sh  main.cpp
2048/: 2048.rb  io_util.rb
C/: AI  exec.sh
C/2048/: 2048.rb  io_util.rb
C/README/: original_js
README/: README
ai/: ai.cpp  ai.hpp  full_connected_network.hpp  layers.hpp  weight_optimizer.hpp
board/: board.hpp
config/: params.cpp  params.hpp
cpp/: bench.sh  exec.sh
cpp/2048/: 2048.rb
ruby/: ai.rb  exec.sh
ruby/2048/: 2048.rb
strategy/: strategy.txt
test/: affine.cpp  cross_entropy_error.cpp  flush.cpp  full_connected_network.cpp  relu.cpp  sigmoid.cpp  softmax.cpp  softmax_with_loss.cpp
util/: math.hpp  random.hpp
